fix media border radius in modal on mobile

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -848,7 +848,11 @@ a.product__text {
     margin: 0;
   }
 
-  .product-media-modal__dialog .global-media-settings {
+  .product-media-modal__dialog .global-media-settings,
+  .product-media-modal__dialog .global-media-settings video,
+  .product-media-modal__dialog .global-media-settings model-viewer,
+  .product-media-modal__dialog .global-media-settings iframe,
+  .product-media-modal__dialog .global-media-settings img {
     border: none;
     border-radius: 0;
   }
